feat: added PaymentProvider (stripe provider + paypall stub)
