# app/DTO/Payment/PaymentItemDTO.php
@@ -4,6 +4,7 @@ namespace App\DTO\Payment;
 
 use App\DTO\BaseDTO;
 use Brick\Money\Money;
+use Spatie\LaravelData\Attributes\Validation\IntegerType;
 use Spatie\LaravelData\Attributes\Validation\StringType;
 
 /**
@@ -30,6 +31,30 @@ class PaymentItemDTO extends BaseDTO
 
     /**
      * @OA\Property(
+     *     property="description",
+     *     type="string",
+     *     description="The description for payment item"
+     * )
+     * @var string
+     */
+    #[StringType]
+    public string $description;
+
+
+    /**
+     * @OA\Property(
+     *     property="quantity",
+     *     type="integer",
+     *     description="Quanity of the payment item",
+     * )
+     * @var int
+     */
+    #[IntegerType]
+    public int $quantity;
+
+
+    /**
+     * @OA\Property(
      *     property="value",
      *     type="string",
      *     description="The value of the payment item",
@@ -39,9 +64,32 @@ class PaymentItemDTO extends BaseDTO
      */
     public Money $value;
 
-    public function __construct(string $name, Money $value)
+    public function __construct(string $name, Money $value, string $description, int $quantity)
     {
         $this->name = $name;
         $this->value = $value;
+        $this->description = $description;
+        $this->quantity = $quantity;
     }
+
+    public function getName(): string
+    {
+        return $this->name;
+    }
+
+    public function getDescription(): string
+    {
+        return $this->description;
+    }
+
+    public function getQuantity(): int
+    {
+        return $this->quantity;
+    }
+
+    public function getValue(): Money
+    {
+        return $this->value;
+    }
+
 }
