# app/Http/Controllers/Api/V1/PaymentController.php
@@ -1,10 +1,15 @@
 <?php
 namespace App\Http\Controllers\Api\V1;
 
+use App\Contracts\Services\IPaymentsService;
+use App\DTO\Payment\PaymentItemDTO;
 use App\Http\Controllers\Controller;
 use App\Http\Requests\Api\V1\Payments\CreatePaymentRequest;
+use App\Http\Requests\Api\V1\Payments\PaymentCallbackRequest;
 use App\Http\Resources\V1\PaymentResource;
+use App\Services\DataModels\PaymentDataItemModel;
 use App\Services\DataModels\PaymentDataModel;
+use Spatie\LaravelData\DataCollection;
 
 /**
  * @OA\Info(
@@ -44,10 +49,47 @@ class PaymentController extends Controller
      *       ),
      * )
      */
-    public function create(CreatePaymentRequest $request)
+    public function create(CreatePaymentRequest $request, IPaymentsService $service)
     {
         $dto = $request->makeDTO();
-        $data = new PaymentDataModel($dto->uuid);
+
+        $paymentItems = array_map(function($item) {
+            /**
+             * @var $item PaymentItemDTO
+             */
+            return new PaymentDataItemModel(
+                $item->getName(),
+                $item->getDescription(),
+                $item->getQuantity(),
+                $item->getValue()
+            );
+        }, $dto->getItems()->items());
+
+
+        $itemCollection = new DataCollection(PaymentDataItemModel::class, $paymentItems);
+
+        $paymentSession = $service->createPayment(
+            new PaymentDataModel(
+                $dto->getTitle(),
+                $dto->getCustomerEmail(),
+                $itemCollection,
+            ), $dto->getProvider(),
+        );
+
+        dd($paymentSession);
+
         return new PaymentResource($data);
+    }
+
+
+    public function success(PaymentCallbackRequest $request, IPaymentsService $service)
+    {
+        dd($request->makeDTO());
+    }
+
+
+    public function cancel(PaymentCallbackRequest $request, IPaymentsService $service)
+    {
+        dd($request->makeDTO());
     }
 }
